# Jni-Sign

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mengbao/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/libnet/: Utils.java
app/src/main/java/com/mengbao/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/test/java/com/mengbao/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
